--- a/css/popup_login.css
+++ b/css/popup_login.css
@@ -50,6 +50,10 @@
 .smart.android #loginFrom input[type='submit']{
 	font-size:17px;
 }
+.app_version.bug_font.smart.android #loginFrom input[type='submit']{
+	font-size:15.39px !important;
+	line-height:36.64px !important;
+}
 #loginFrom input[type='submit']:hover{
 	background: #062865;
     background: -moz-linear-gradient(top, #144092 0%, #062865 100%);
@@ -90,4 +94,7 @@
 }
 .smart.android #btnRecupero{
 	font-size:15.4px !important;
+}
+.app_version.bug_font.smart.android #btnRecupero{
+	font-size:13.94px !important;
 }
