--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -263,6 +263,10 @@ body:not(.smart) #p_set{
     font-size: 16px !important;
 	background-position: 5px 14px !important;
 }
+.app_version.bug_font.smart.android .elencoPunti p *{
+	line-height: 33.9px !important;
+    font-size: 14.48px !important;
+}
 .visElPt{
 	display:block !important;
 }
