--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -302,6 +302,10 @@ body:not(.touch) .listaMeridiani .spazioDopo{
     font-size: 16px !important;
 	background-position: 5px 14px !important;
 }
+.app_version.bug_font.smart.android .elencoPunti p *{
+	line-height: 33.9px !important;
+    font-size: 14.48px !important;
+}
 .visElPt{
 	display:block !important;
 }
