--- a/css/schede.css
+++ b/css/schede.css
@@ -502,8 +502,12 @@ body:not(.smart) #scheda.schForm:not(.schedaRitorno):not(.minimized):not(.tab_ts
 .frSu #frSchSu{
 	background-color:rgba(255,255,255,0.07);
 }
-.frGiu #frSchGiu:hover,
-.frSu #frSchSu:hover{
+.smart .frGiu #frSchGiu,
+.smart .frSu #frSchSu{
+	background-color:rgba(0,0,0,0.1) !important;
+}
+body:not(.smart) .frGiu #frSchGiu:hover,
+body:not(.smart) .frSu #frSchSu:hover{
 	background-color:rgba(255,255,255,0.15) !important;
 }
 #frSch svg line{
