--- a/css/menu.css
+++ b/css/menu.css
@@ -74,8 +74,9 @@ body:not(.smart) #icone.iconeEspanse{
 }
 #btns_set{
 	text-align:left;
-	display:inline-block;
+	display:inline;
 	width:auto !important;
+	height:auto !important;
 }
 .smart #icone div svg{
 	transform: rotate(-90deg);
@@ -88,7 +89,6 @@ body:not(.smart) #icone.iconeEspanse{
 	cursor:pointer;
 	text-align:left;
 }
-#contBtnModello div,
 #contBtnModello div{
 	background-repeat:no-repeat;
 	background-position:center center;
