--- a/css/forms.css
+++ b/css/forms.css
@@ -134,11 +134,10 @@ body:not(.bodyStyled2):not(.smart) #scheda.schForm .annullaBtn:hover{
     margin-left: 0px;
     background-color: #ff9100;
 }
-.smart #scheda.schForm .annullaBtn/*,
-.smart #scheda.schForm .p_paz_el*/{
+.smart #scheda.schForm .annullaBtn{
 	display:none;
 }
-/*#scheda.schForm */.p_paz_el_menu{
+.p_paz_el_menu{
     padding: 0px;
     cursor: pointer;
     padding-left: 37px;
@@ -196,36 +195,6 @@ body:not(.smart) #scheda .formBtn{
 body:not(.smart) #scheda:not(.schLato) .formBtn{
     top: 25px !important;
 }
-/*body:not(.smart) #scheda:not(.h150) .formBtn{
-    position: absolute !important;
-    bottom: 0px;
-    left: 0px !important;
-    width: 100% !important;
-    padding: 10px !important;
-    padding-right: 18px !important;
-    border-top: 1px solid rgba(0,0,0,0.3) !important;
-    background-color: #444 !important;
-    margin: 0px !important;
-}*/
-/*.smart .formBtn{
-	position: fixed;
-    z-index: 10000;
-    bottom: 0px;
-    width: 100%;
-    left: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: #FFF;
-    height: 56px !important;
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
-	margin-bottom: 0px !important;
-}
-.smart .formBtn span{
-	margin-top:8px !important;
-}
-.smart .formBtn div{
-	margin-top:16px !important;
-}*/
 
 body:not(.smart) .submitBtn,
 body:not(.smart) .annullaBtn,
@@ -282,7 +251,6 @@ body:not(.smart) .stampaBtn{
 	font-size:12.1px !important;
 	border-radius:4px;
 	box-shadow:0px 0px 3px #000;
-	/*float:left;*/
 	display: inline-block;
     vertical-align: middle;
 	background-color:#f9bf83;
@@ -404,10 +372,6 @@ body:not(.smart) .stampaBtn{
 }
 #contSintomi div:not(.noResults):hover{ /* PAZIENTI */	
 	background-color:rgba(0,0,0,0.1) !important;
-}
-#contSintomi .noResults{ /* PAZIENTI */
-	/*padding-top:0px;
-	padding-bottom:0px;*/
 }
 .scoreSelect{
 	float:right;
@@ -832,7 +796,6 @@ body:not(.smart) .stampaBtn{
 	background-image:url(../img/zoom+.png);
 	background-size: 23px;
     background-position: left center;
-	/*float: right !important;*/
 	margin-top:5px !important;
 }
 ,cont_p_paz_label{
@@ -866,12 +829,10 @@ body:not(.smart) .stampaBtn{
 	padding-right:28px !important;
 	margin-right:7px !important;
 	box-shadow: 0px 0px 3px #000;
-	/*width: 160px;*/
 	line-height:29px;
 	height:31px;
 	cursor:pointer;
 	margin-top: 17px !important;
-	/*float: left;*/
 	display: inline-block;
     vertical-align: middle;
 }
@@ -880,7 +841,6 @@ body:not(.smart) .stampaBtn{
 }
 .p_paz_gruppo{
 	padding-left:30px !important;
-   /* padding-right: 13px !important;*/
 	background-position:3px center,calc(100% - -8px) center;
 	background-image:url(../img/pallinoPatChiaroGroup.png),url(../img/frDxB.png);
 	background-repeat:no-repeat;
@@ -888,7 +848,6 @@ body:not(.smart) .stampaBtn{
 }
 .p_paz_meridiani{
 	padding-left:30px !important;
-   /* padding-right: 13px !important;*/
 	background-position:3px center,calc(100% - -8px) center;
 	background-image:url(../img/ico_meridiani.png),url(../img/frDxB.png);
 	background-repeat:no-repeat;
@@ -926,28 +885,6 @@ body:not(.smart) .stampaBtn{
     display: inline-block;
     float: right;
 }
-/*.p_paz_el{
-	height: 25px;
-    line-height: 25px;
-    padding: 0px;
-    cursor: pointer;
-    padding-left: 25px;
-    background-image: url(../img/ico_cestinoR.png);
-    background-repeat: no-repeat;
-    background-position: left -2px;
-    text-align: right;
-    float: left;
-	margin-top: 17px;
-    margin-left: 2px;
-}
-.smart.android .p_paz_el{
-	font-size:17px;
-}
-body:not(.smart) #scheda:not(.h150) .p_paz_el{
-    margin-top: 4px;
-	color: #ff815a;
-    background-image: url(../img/ico_cestinoA.png) !important;
-}*/
 #puntiTsuboMap,
 #meridianiTsuboMap{ /* PAZIENTI */
 	height:auto !important;
@@ -996,14 +933,12 @@ body:not(.smart) #scheda:not(.h150) .p_paz_el{
 .app_version.bug_font.smart.android .rgProcMod .meridModif{
     line-height: 37.56px !important;
 }
-/*@media only print{*/
-	.bodyStampa .dettMeridiano,
-	.bodyStampa .tsb,
-	.bodyStampa .valPunto,
-	.bodyStampa .valMerid{
-		border:1px solid #000 !important;
-	}
-/*}*/
+.bodyStampa .dettMeridiano,
+.bodyStampa .tsb,
+.bodyStampa .valPunto,
+.bodyStampa .valMerid{
+	border:1px solid #000 !important;
+}
 
 .p_sch_pref, /* procedura */
 .p_sch_no_pref, /* procedura */
@@ -1214,9 +1149,6 @@ _:-webkit-full-screen,
 	margin-left:0px !important;
 }
 
-/*#scheda:not(.sch_Max600) #formMod input:not([type=checkbox]):not([type=file]):not(#paz_add):not(#tag_add):not(.dettProcText):not(.campoData){
-	padding-left:100px !important;
-}*/
 #scheda:not(.sch_Max600) .styled{
 	padding-left:100px !important;
 }
@@ -1227,9 +1159,6 @@ _:-webkit-full-screen,
 #dettagliCont textarea{
 	margin-bottom:-7px !important;
 }
-
-
-
 
 
 #paz_add, /* PAZIENTI */
@@ -1346,12 +1275,6 @@ _:-webkit-full-screen,
     opacity: 0.6;
     cursor: pointer;
 }
-/*.ico_mod_label_etichette{
-    margin-bottom: -55px;
-    margin-left: 79px;
-    border-radius: 10px;
-}*/
-
 #paz_add,
 .label_add{
 	width: calc(100% - 127px) !important;
@@ -1370,7 +1293,6 @@ _:-webkit-full-screen,
 .TitTrattDx{ /* PAZIENTI */
 	padding-left:5px !important;
 	max-width:100% !important;
-	/*margin-top:20px;*/
 }
 .RicTrattDx{ /* PAZIENTI */
 	padding-left:5px !important;
@@ -1396,8 +1318,6 @@ _:-webkit-full-screen,
 	font-size:15.4px !important;
 }
 .dettPunto{ /* procedura + PAZIENTI */
-	/*padding-left:20px !important;
-	background:url(../img/pallinoPat.png) no-repeat 6px 13px;*/
 	padding-left:4px !important;
 	border-bottom:1px solid #CCC;
 }
@@ -1439,7 +1359,6 @@ _:-webkit-full-screen,
     border-radius: 6px;
 }
 .meridModif{ /* procedura + PAZIENTI */
-  	/*width: calc(100% - 32px) !important;*/
 	width:200px !important;
 }
 .dettMeridiano span:not(.valModif):not(.meridModif):not(.meridProc){
@@ -1463,21 +1382,6 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 }
 .valPunto,
 .mezzoPunto{
-    /*padding-right: 10px;
-    width: 75px;
-    display: inline-block;
-    background-color: rgba(255,255,255,0.4);
-    margin-left: 3px;
-    height: 30px;
-    line-height: 28px;
-    padding-left: 4px;
-    border-radius: 3px;
-    border: 1px solid rgba(0,0,0,0.3);
-    vertical-align: middle;
-    margin-top: -3px;
-	cursor:pointer;
-	overflow: hidden;*/
-	
     width: 27px;
     display: inline-block;
     margin-left: 0px;
@@ -1528,7 +1432,6 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 }
 
 #formMod textarea{ /* PAZIENTI */
-	/*font-family:Verdana, Geneva, sans-serif;*/
 	background-color:rgba(255,255,255,0.5);
 	border-radius:3px;
 	padding:6px;
@@ -1537,9 +1440,6 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	border:1px solid rgba(0,0,0,0.3);
-}
-#AnamnesiMotivo{ /* PAZIENTI */
-	/*height:70px !important;*/
 }
 #formMod textarea{ /* PAZIENTI */
 	width:100% !important;
@@ -1621,23 +1521,10 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 }
 #formMod select:not(.p_proc_gruppo):not(.p_paz_gruppo):not(.p_paz_meridiani):not(.p_proc_meridiani), /* PAZIENTI */
 #dataTxt{
-	/*border:none;
-	background-color:rgba(255,255,255,0.5);
-	border-radius:3px;
-	padding:3px;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	border:1px solid rgba(0,0,0,0.3);
-	background:rgba(255,255,255,0.5) url(../img/inpbg.png) no-repeat right center;
-	padding-top:0px;
-	padding-left:5px;
-	padding-right:25px !important;*/
-	
 	border: none;
     background-color: rgba(255,255,255,0.5);
     border-radius: 3px;
     padding: 3px;
-    /* margin-left: 3px; */
     -webkit-appearance: none;
     -moz-appearance: none;
     border: 1px solid rgba(0,0,0,0.3);
@@ -1649,7 +1536,6 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 }
 #formMod select:not(.p_proc_gruppo):not(.p_paz_gruppo):not(.p_paz_meridiani):not(.p_proc_meridiani), /* PAZIENTI */
 #dataTxt{
-	/*font-weight:bold;*/
 	line-height:30px;/* !important;*/
 	height:32px;
 }
@@ -1864,12 +1750,8 @@ body:not(.touch) #puntiTsuboMap .dettPunto:hover{
 .gr_ret{
 	height: 32px;
 	line-height: 32px;
-    /*padding-left: 32px;*/
 	font-weight:bold;
-	/*cursor:pointer;*/
 	border-top:1px solid rgba(0,0,0,0.1);
-	/*background: url(../img/frSx.png) -5px center no-repeat #666;
-    background-size: auto 42px;*/
 	background-color: #666;
 	color:#FFF;
     border-top-left-radius: 4px;
@@ -2123,7 +2005,6 @@ body:not(.touch) .sezioneChiusa:hover{
     overflow-x: auto;
     padding: 10px;
     white-space: nowrap;	
-   /* width: 100%;*/
 }
 .galleryFull{
     height: 180px;
@@ -2161,7 +2042,6 @@ body:not(.touch) .sezioneChiusa:hover{
 	display:none;
 }
 .gall_full{
-	/*background-color: rgba(255,255,255,0.25);*/
 	border-radius: 2px;
 	float: right;
 	margin:4px;
@@ -2169,7 +2049,6 @@ body:not(.touch) .sezioneChiusa:hover{
 }
 .gall_del{
 	padding: 5px;
-	/*background-color: rgba(255,255,255,0.5);*/
 	box-shadow:0px 0px 3px #000;
 	background-color: #F00;
 	border-radius: 13px;
@@ -2225,10 +2104,6 @@ body:not(.touch) #contGallery > div:not(.noResults) > div:hover img{
     color: #000;
     padding-left: 7px;
     border-bottom: 1px solid rgba(0,0,0,0.1);
-   /* background-image: url(../img/frSuB.png);
-    background-position: right center;
-    background-repeat: no-repeat;
-    background-size: 26px;*/
     cursor: pointer;
 	display:none;
 	text-align: left;
